; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-cmdq-helper.c_cmdq_pkt_write_mask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-cmdq-helper.c_cmdq_pkt_write_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmdq_pkt = type { i32 }

@CMDQ_CODE_MASK = common dso_local global i32 0, align 4
@CMDQ_WRITE_ENABLE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmdq_pkt_write_mask(%struct.cmdq_pkt* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.cmdq_pkt*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.cmdq_pkt* %0, %struct.cmdq_pkt** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* %11, align 4
  store i32 0, i32* %12, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp ne i32 %14, -1
  br i1 %15, label %16, label %25

16:                                               ; preds = %5
  %17 = load %struct.cmdq_pkt*, %struct.cmdq_pkt** %6, align 8
  %18 = load i32, i32* @CMDQ_CODE_MASK, align 4
  %19 = load i32, i32* %10, align 4
  %20 = xor i32 %19, -1
  %21 = call i32 @cmdq_pkt_append_command(%struct.cmdq_pkt* %17, i32 %18, i32 0, i32 %20)
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* @CMDQ_WRITE_ENABLE_MASK, align 4
  %23 = load i32, i32* %11, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %11, align 4
  br label %25

25:                                               ; preds = %16, %5
  %26 = load %struct.cmdq_pkt*, %struct.cmdq_pkt** %6, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @cmdq_pkt_write(%struct.cmdq_pkt* %26, i32 %27, i32 %28, i32 %29)
  %31 = load i32, i32* %12, align 4
  %32 = or i32 %31, %30
  store i32 %32, i32* %12, align 4
  %33 = load i32, i32* %12, align 4
  ret i32 %33
}

declare dso_local i32 @cmdq_pkt_append_command(%struct.cmdq_pkt*, i32, i32, i32) #1

declare dso_local i32 @cmdq_pkt_write(%struct.cmdq_pkt*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
